# prologsolvers

./: .gitignore  README.md  play.ipynb  pyproject.toml
prologsolvers/: __init__.py  leancop.py  nanocopi.py  trs.py
prologsolvers/sat/: harness.pl  linear_theory.pl  normalise.pl  parser.pl  results-back.txt  results-core.txt  results-freeze.txt  results-instrumented.txt  results-learning.txt  results-restore.txt  results-when.txt  sat_solver_back.pl  sat_solver_core.pl  sat_solver_freeze.pl  sat_solver_instrumented.pl  sat_solver_learning.pl  sat_solver_restore.pl  sat_solver_when.pl  smt.pl  static_var_order.pl  sudoku.pl  uninterpreted_theory.pl
prologsolvers/setlog/: setlog.pl  setlog_rules.pl  setlog_tc.pl  setlog_vcg.pl  size_solver.pl
test/: test_trs.py
