[project]
name = "prologsolvers"
version = "0.1.1"
authors = [{ name = "Philip Zucker", email = "philzook58@gmail.com" }]
description = "Prolog Provers"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["janus_swi"]
[project.urls]
#homepage = "https://github.com/philzook58/knuckledragger"
